# Oracle

./: .gitignore  CLAUDE.md  README.md  docker-compose.yml
api/: main.py  pyproject.toml  run_dev.py
api/alembic/: env.py
api/alembic/versions/: 35f2f01bc638_initial_migration.py  5a9aad0aa4f9_initial.py  c88c63ac6da7_update_default_categories.py
api/api/: dependencies.py
api/api/v1/: __init__.py  auth.py  expense.py  expense_category.py  income.py  investment.py  member.py  monthly_budget.py
api/core/: config.py
api/db/: base.py  engine.py
api/middleware/: case_conversion.py  session_refresh.py
api/models/: __init__.py  expense.py  expense_category.py  household.py  income.py  investment_asset.py  investment_transaction.py  investment_valuation_snapshot.py  loan.py  loan_member.py  loan_payment.py  loan_snapshot.py  member.py  monthly_budget.py  session.py  user.py
api/schemas/: auth.py  expense.py  expense_category.py  income.py  investment.py  member.py  monthly_budget.py
api/services/: expense.py  expense_category.py  household.py  income.py  investment.py  member.py  monthly_budget.py  session.py  user.py
ui/: package-lock.json  package.json  tsconfig.json
ui/src/api/: index.ts
ui/src/api/auth/: context.tsx  hooks.ts  requests.ts  types.ts
ui/src/api/budget/: hooks.ts  requests.ts  types.ts
ui/src/api/investments/: hooks.ts  index.ts  requests.ts  types.ts
ui/src/api/members/: hooks.ts  requests.ts  types.ts
ui/src/app/: layout.tsx  page.tsx  providers.tsx
ui/src/app/(auth)/: layout.tsx
ui/src/app/(auth)/login/: page.tsx
ui/src/app/(auth)/register/: page.tsx
ui/src/app/budget/: page.tsx
ui/src/app/budget/_components/: budget-hero.tsx  category-breakdown.tsx  category-form-modal.tsx  expense-form-modal.tsx  income-form-modal.tsx  index.ts  month-picker.tsx  quick-actions.tsx  transaction-item.tsx  transaction-list.tsx
ui/src/app/investments/: page.tsx
ui/src/app/investments/[id]/: page.tsx
ui/src/app/investments/[id]/_components/: asset-hero.tsx  transaction-form-modal.tsx  transaction-list.tsx  valuation-form-modal.tsx
ui/src/app/investments/_components/: asset-card.tsx  asset-form-modal.tsx  asset-list.tsx  portfolio-hero.tsx
ui/src/app/loans/: page.tsx
ui/src/app/networth/: page.tsx
ui/src/app/settings/: page.tsx
ui/src/core/components/: index.ts
ui/src/core/components/layout/: footer.tsx  header.tsx
ui/src/core/components/ui/: badge.tsx  button.tsx  card.tsx  empty-state.tsx  error-state.tsx  input.tsx  loader.tsx  modal.tsx  progress.tsx  select.tsx
ui/src/core/hooks/: index.ts  use-local-storage.ts  use-media-query.ts
ui/src/lib/: axios.ts  env.ts  react-query.ts  utils.ts
ui/src/styles/: globals.css
ui/src/types/: api.ts  global.ts
