[project]
name = "api"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "alembic>=1.13.0",
    "clear>=2.0.0",
    "fastapi>=0.121.3",
    "passlib[argon2]>=1.7.4",
    "psycopg2>=2.9.11",
    "psycopg[binary]>=3.2.13",
    "pydantic[email]>=2.12.4",
    "pydantic-settings>=2.12.0",
    "python-dotenv>=1.2.1",
    "ruff>=0.14.6",
    "sqlalchemy>=2.0.44",
    "uvicorn[standard]>=0.38.0",
]

[tool.ruff]
target-version = "py313"
line-length = 120
exclude = ["alembic", ".venv"]

[tool.ruff.lint]
select = [
    "E",     # Whitespace, indentation, and PEP8 style issues
    "F",     # Undefined names, unused variables, dead code
    "I",     # Isort
    "UP",    # Modernizes syntax to match target Python version
    "DJ",    # Django-specific best practices
    "ASYNC", # Flags blocking calls and bad patterns in async code
    "RUF",   # Ruff-specific correctness and style improvements
    "B",     # Catches likely bugs and suspicious code
    "N",     # Enforces naming conventions
    "SIM",   # Suggests simpler control-flow patterns
    "C4",    # Enforces efficient list/set/dict comprehensions
    "ISC",   # Catches implicit string concatenation bugs
    "LOG",   # Enforces correct logging format strings
    "T10",   # Flags pdb/breakpoint left in code
    "RET",   # Enforces consistent return statements
    "RSE",   # Enforces proper raise statement usage
    "Q",     # Enforces consistent quote style
    "PYI",   # Type stub file (.pyi) linting
    "PIE",   # Misc linting for Python idioms
    "ICN",   # Enforces import naming conventions
    "INT",   # Validates gettext internationalization calls
    "TC",    # Moves type-only imports into TYPE_CHECKING blocks
    "S",     # Detects common security issues
]

ignore = [
    "UP045",  # Enforces `X | None` instead of `Optional[X]`
    "UP007",  # Enforces `X | Y` instead of `Union[X, Y]`
    "C401",   # Enforces set literals over set([...])
    "C405",   # Enforces set literals over set()
    "TC006",  # Enforces string type annotations in cast()
    "B008",  # FastAPI Depends() pattern
    "S101",   # Flags use of assert
]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
line-ending = "auto"
skip-magic-trailing-comma = false
